Add migrations, mobile views, and add active cavity count to shot weight form

--- a/templates/mobile_views/partWeight.html
+++ b/templates/mobile_views/partWeight.html
@@ -33,7 +33,7 @@
                     {{ value.startWeight }}
                 </td>
                 <td>
-                    {{ value.tmmWeight }}
+                    {{ value.avgPartWeight }}
                 </td>
             </tr>
         {% endfor %}
