Create templates for new inspections

--- a/templates/mobile_views/partWeight.html
+++ b/templates/mobile_views/partWeight.html
@@ -22,7 +22,7 @@
         </thead>
         <tbody>
         {% for key,value in active_parts.items %}
-            <tr class={{ value.alertLevel }}>
+            <tr class={{ value.alertLevelw }}>
                 <td>
                     {{ value.machID }}
                 </td>
