--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -2,9 +2,11 @@
 {% load bootstrap3 %}
 {% bootstrap_css %}
 {% bootstrap_javascript jquery=1 %}
-
 <html lang="en">
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Home Page</title>
     {#    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" media="screen" />#}
 </head>
