Add machine operator to startup shot

--- a/templates/startupshot/view.html
+++ b/templates/startupshot/view.html
@@ -30,6 +30,7 @@
                         <tr>
                             <th>Job Number</th>
                             <th>Date Created</th>
+                            <th>Operator Name</th>
                             <th>Inspector Name</th>
                             <th>Shot Weight</th>
                             <th>Active Cavities</th>
@@ -41,6 +42,7 @@
                             <tr>
                                 <td>{{ eachJob.jobNumber }}</td>
                                 <td>{{ eachJob.dateCreated }}</td>
+                                <td>{{ eachJob.machineOperator }}</td>
                                 <td>{{ eachJob.inspectorName }}</td>
                                 <td>{{ eachJob.shotWeight }}</td>
                                 <td>{{ eachJob.activeCavities }}</td>
