--- a/templates/inspection/subTemplates/subJobInfo.html
+++ b/templates/inspection/subTemplates/subJobInfo.html
@@ -35,6 +35,7 @@
                 <caption style="text-align:center">Start Up Shot Information</caption>
                 <thead>
                 <tr>
+                    <th>Machine Operator</th>
                     <th>Inspector</th>
                     <th>Job Number</th>
                     <th>Shot Weight</th>
@@ -47,6 +48,7 @@
                 <tbody>
                 {% for ep in active_job %}
                     <tr>
+                        <td> {{ ep.machineOperator }}</td>
                         <td> {{ ep.inspectorName }}</td>
                         <td>{{ ep.jobNumber }} </td>
                         <td>{{ ep.shotWeight }}</td>
