Fix django template render for equipment view, add reverse date order to report, and add comments to PM

--- a/templates/equipment/reports/equipment_repair_report.html
+++ b/templates/equipment/reports/equipment_repair_report.html
@@ -33,6 +33,7 @@
                         <th>Unit Cost</th>
                         <th>Quantity</th>
                         <th>Total Cost</th>
+                        <th>Comments</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -47,6 +48,7 @@
                             <td>${{ each_repair.part_cost }}</td>
                             <td>{{ each_repair.part_quantity }}</td>
                             <td>${{ each_repair.part_cost|mul:each_repair.part_quantity }}</td>
+                            <td> {{ each_PM.comments }}</td>
                         </tr>
                     {% endfor %}
                     </tbody>
