--- a/templates/equipment/reports/equipment_pm_report.html
+++ b/templates/equipment/reports/equipment_pm_report.html
@@ -28,6 +28,7 @@
                         <th>Date</th>
                         <th>PM Frequency</th>
                         <th>Logged PM</th>
+                        <th>Comments</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -37,6 +38,7 @@
                             <td>{{ each_PM.dateCreated }}</td>
                             <td>{{ each_PM.pm_frequency }}</td>
                             <td> {% for pmt in each_PM.logged_pm.all %} <p>{{ pmt.pm_item }}</p> {% endfor %}</td>
+                            <td> {{ each_PM.comments }}</td>
                         </tr>
                     {% endfor %}
                     </tbody>
