Fix PHL and PM formatting

--- a/templates/equipment/forms/pm.html
+++ b/templates/equipment/forms/pm.html
@@ -19,12 +19,16 @@
 <div class="col-sm-10 bootcards-cards">
     {% include "equipment/subTemplates/equipInfo.html" %}
 
+    <div class="panel panel-default bootcards-richtext">
+        <div class="panel-body">
+            {% include "project_form_templates/gen_form.html" %}
+            </div>
+    </div>
+
     {% include "equipment/subTemplates/pm_subreport.html" %}
 
 
-    <div class="panel panel-default bootcards-richtext">
-            {% include "project_form_templates/gen_form.html" %}
-    </div>
+
 </div>
 
 
