--- a/templates/equipment/subTemplates/pm_subreport.html
+++ b/templates/equipment/subTemplates/pm_subreport.html
@@ -23,6 +23,7 @@
                     </tr>
                 {% endfor %}
                 </tbody>
+            </table>
         </div>
     </div>
 {% endif %}
