--- a/templates/inspection/detailJob.html
+++ b/templates/inspection/detailJob.html
@@ -23,34 +23,34 @@
                 <div class="list-group">
                     {% for ep in active_job %}
 
-                        <a class="list-group-item" href="/inspection/jobReport/{{ ep.jobNumber }}">
+                        <a class="list-group-item" href="/inspection/jobReport/{{ ep.jobNumber.strip }}">
                             <h4 class="list-group-item-heading">Job Report</h4>
                             <p class="list-group-item-text">Click here to view the current job report</p>
                         </a>
 
                         {% if inspectionTypes.visual_inspection %}
-                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber }}/visual">
+                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/visual">
                             <h4 class="list-group-item-heading">Visual Inspection</h4>
                             <p class="list-group-item-text">Click Here to record a visual inspection </p>
                             </a>
                         {% endif %}
 
                         {% if inspectionTypes.part_weight_inspection %}
-                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber }}/part_weight">
+                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/part_weight">
                             <h4 class="list-group-item-heading">Part Weight Inspection</h4>
                             <p class="list-group-item-text">Click Here to record a part weight inspection </p>
                             </a>
                         {% endif %}
 
                         {% if inspectionTypes.shot_weight_inspection %}
-                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber }}/shot_weight">
+                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/shot_weight">
                             <h4 class="list-group-item-heading">Shot Weight Inspection</h4>
                             <p class="list-group-item-text">Click Here to record a part weight inspection </p>
                             </a>
                         {% endif %}
 
                         {% if inspectionTypes.od_inspection %}
-                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber }}/outside_diameter">
+                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/outside_diameter">
                                 <h4 class="list-group-item-heading">Outside Diameter Inspection</h4>
 
                                 <p class="list-group-item-text">Click Here to record an outside diameter inspection </p>
@@ -58,7 +58,7 @@
                         {% endif %}
 
                         {% if inspectionTypes.vol_inspection %}
-                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber }}/volume_test">
+                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/volume_test">
                                 <h4 class="list-group-item-heading">Volume Inspection</h4>
 
                                 <p class="list-group-item-text">Click Here to record a volume inspection </p>
@@ -67,7 +67,7 @@
 
 
                         {% if inspectionTypes.neck_diameter_inspection %}
-                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber }}/neck_diameter">
+                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/neck_diameter">
                                 <h4 class="list-group-item-heading">Neck Diameter Inspection</h4>
 
                                 <p class="list-group-item-text">Click Here to record a neck diameter inspection </p>
@@ -75,7 +75,7 @@
                         {% endif %}
 
                         {% if inspectionTypes.assembly_test_inspection %}
-                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber }}/assembly_test">
+                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/assembly_test">
                                 <h4 class="list-group-item-heading">Assembly Inspection</h4>
 
                                 <p class="list-group-item-text">Click Here to record an assembly inspection </p>
@@ -83,7 +83,7 @@
                         {% endif %}
 
                         {% if inspectionTypes.carton_temp_inspection %}
-                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber }}/carton_temp">
+                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/carton_temp">
                                 <h4 class="list-group-item-heading">Carton Temperature Inspection</h4>
 
                                 <p class="list-group-item-text">Click Here to record a carton temperature
@@ -93,7 +93,7 @@
 
 
                         {% if inspectionTypes.vision_system_inspection %}
-                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber }}/vision_system">
+                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/vision_system">
                                 <h4 class="list-group-item-heading">Vision System Inspection</h4>
 
                                 <p class="list-group-item-text">Click Here to record a vision system inspection </p>
