Visual Inspection: map true and false to other other text. Add load mathfilter tag to shot weight report

--- a/templates/inspection/subTemplates/subVisualInspection.html
+++ b/templates/inspection/subTemplates/subVisualInspection.html
@@ -30,7 +30,7 @@
                     {{ ep.headCavID }}
                 </td>
                 <td>
-                    {{ ep.inspectionResult }}
+                    {{ ep.inspectionResult|yesno:"Pass,Fail,Fail" }}
                 </td>
                 <td>
                     {% for dt in ep.defectType.all %} {{ dt.defectType }}. {% endfor %}
