Add comments to reports

--- a/templates/inspection/reports/jobReport.html
+++ b/templates/inspection/reports/jobReport.html
@@ -20,6 +20,7 @@
     {% include "inspection/subTemplates/subPartweight.html" %}
     {% include "inspection/subTemplates/subShotWeight.html" %}
     {% include "inspection/subTemplates/subVisualInspection.html" %}
+    {% include "inspection/subTemplates/subComments.html" %}
     {% include "inspection/subTemplates/subAssembly.html" %}
     {% include "inspection/subTemplates/subCartonTemp.html" %}
     {% include "inspection/subTemplates/subNeckDiameter.html" %}
