Fix machine repair to display comments

--- a/templates/equipment/reports/equipment_repair_report.html
+++ b/templates/equipment/reports/equipment_repair_report.html
@@ -48,7 +48,7 @@
                             <td>${{ each_repair.part_cost }}</td>
                             <td>{{ each_repair.part_quantity }}</td>
                             <td>${{ each_repair.part_cost|mul:each_repair.part_quantity }}</td>
-                            <td> {{ each_PM.comments }}</td>
+                            <td> {{ each_repair.comments }}</td>
                         </tr>
                     {% endfor %}
                     </tbody>
