--- a/templates/inspection/subTemplates/subComments.html
+++ b/templates/inspection/subTemplates/subComments.html
@@ -3,7 +3,7 @@
         <div class="panel panel-default bootcards-richtext">
             <div class="panel-body">
                 <table class="table table-hover">
-                    <caption style="text-align:center">Production Comments</caption>
+                    <caption style="text-align:center">QC Comments</caption>
                     <thead>
                     <tr>
                         <th>Inspector Name</th>
