--- a/templates/inspection/detailJob.html
+++ b/templates/inspection/detailJob.html
@@ -28,77 +28,84 @@
                             <p class="list-group-item-text">Click here to view the current job report</p>
                         </a>
 
-                        {% if inspectionTypes.visual_inspection %}
-                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/visual">
-                            <h4 class="list-group-item-heading">Visual Inspection</h4>
-                            <p class="list-group-item-text">Click Here to record a visual inspection </p>
+                        {% for eachPF in pf_inspectionType %}
+                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/pf/{{ eachPF.testName }}">
+                            <h4 class="list-group-item-heading">{{ eachPF.testName }}</h4>
+                            <p class="list-group-item-text">Click Here to record a record for {{ eachPF.testName }} </p>
                             </a>
-                        {% endif %}
+                        {% endfor %}
 
-                        {% if inspectionTypes.part_weight_inspection %}
-                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/part_weight">
-                            <h4 class="list-group-item-heading">Part Weight Inspection</h4>
-                            <p class="list-group-item-text">Click Here to record a part weight inspection </p>
-                            </a>
-                        {% endif %}
-
-                        {% if inspectionTypes.shot_weight_inspection %}
-                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/shot_weight">
-                            <h4 class="list-group-item-heading">Shot Weight Inspection</h4>
-                            <p class="list-group-item-text">Click Here to record a part weight inspection </p>
-                            </a>
-                        {% endif %}
-
-                        {% if inspectionTypes.od_inspection %}
-                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/outside_diameter">
-                                <h4 class="list-group-item-heading">Outside Diameter Inspection</h4>
-
-                                <p class="list-group-item-text">Click Here to record an outside diameter inspection </p>
-                            </a>
-                        {% endif %}
-
-                        {% if inspectionTypes.vol_inspection %}
-                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/volume_test">
-                                <h4 class="list-group-item-heading">Volume Inspection</h4>
-
-                                <p class="list-group-item-text">Click Here to record a volume inspection </p>
-                            </a>
-                        {% endif %}
-
-
-                        {% if inspectionTypes.neck_diameter_inspection %}
-                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/neck_diameter">
-                                <h4 class="list-group-item-heading">Neck Diameter Inspection</h4>
-
-                                <p class="list-group-item-text">Click Here to record a neck diameter inspection </p>
-                            </a>
-                        {% endif %}
-
-                        {% if inspectionTypes.assembly_test_inspection %}
-                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/assembly_test">
-                                <h4 class="list-group-item-heading">Assembly Inspection</h4>
-
-                                <p class="list-group-item-text">Click Here to record an assembly inspection </p>
-                            </a>
-                        {% endif %}
-
-                        {% if inspectionTypes.carton_temp_inspection %}
-                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/carton_temp">
-                                <h4 class="list-group-item-heading">Carton Temperature Inspection</h4>
-
-                                <p class="list-group-item-text">Click Here to record a carton temperature
-                                    inspection </p>
-                            </a>
-                        {% endif %}
-
-
-                        {% if inspectionTypes.vision_system_inspection %}
-                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/vision_system">
-                                <h4 class="list-group-item-heading">Vision System Inspection</h4>
-
-                                <p class="list-group-item-text">Click Here to record a vision system inspection </p>
-                            </a>
-                        {% endif %}
+{#                        {% if inspectionTypes.visual_inspection %}#}
+{#                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/visual">#}
+{#                            <h4 class="list-group-item-heading">Visual Inspection</h4>#}
+{#                            <p class="list-group-item-text">Click Here to record a visual inspection </p>#}
+{#                            </a>#}
+{#                        {% endif %}#}
+{##}
+{#                        {% if inspectionTypes.part_weight_inspection %}#}
+{#                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/part_weight">#}
+{#                            <h4 class="list-group-item-heading">Part Weight Inspection</h4>#}
+{#                            <p class="list-group-item-text">Click Here to record a part weight inspection </p>#}
+{#                            </a>#}
+{#                        {% endif %}#}
+{##}
+{#                        {% if inspectionTypes.shot_weight_inspection %}#}
+{#                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/shot_weight">#}
+{#                            <h4 class="list-group-item-heading">Shot Weight Inspection</h4>#}
+{#                            <p class="list-group-item-text">Click Here to record a part weight inspection </p>#}
+{#                            </a>#}
+{#                        {% endif %}#}
+{##}
+{#                        {% if inspectionTypes.od_inspection %}#}
+{#                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/outside_diameter">#}
+{#                                <h4 class="list-group-item-heading">Outside Diameter Inspection</h4>#}
+{##}
+{#                                <p class="list-group-item-text">Click Here to record an outside diameter inspection </p>#}
+{#                            </a>#}
+{#                        {% endif %}#}
+{##}
+{#                        {% if inspectionTypes.vol_inspection %}#}
+{#                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/volume_test">#}
+{#                                <h4 class="list-group-item-heading">Volume Inspection</h4>#}
+{##}
+{#                                <p class="list-group-item-text">Click Here to record a volume inspection </p>#}
+{#                            </a>#}
+{#                        {% endif %}#}
+{##}
+{##}
+{#                        {% if inspectionTypes.neck_diameter_inspection %}#}
+{#                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/neck_diameter">#}
+{#                                <h4 class="list-group-item-heading">Neck Diameter Inspection</h4>#}
+{##}
+{#                                <p class="list-group-item-text">Click Here to record a neck diameter inspection </p>#}
+{#                            </a>#}
+{#                        {% endif %}#}
+{##}
+{#                        {% if inspectionTypes.assembly_test_inspection %}#}
+{#                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/assembly_test">#}
+{#                                <h4 class="list-group-item-heading">Assembly Inspection</h4>#}
+{##}
+{#                                <p class="list-group-item-text">Click Here to record an assembly inspection </p>#}
+{#                            </a>#}
+{#                        {% endif %}#}
+{##}
+{#                        {% if inspectionTypes.carton_temp_inspection %}#}
+{#                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/carton_temp">#}
+{#                                <h4 class="list-group-item-heading">Carton Temperature Inspection</h4>#}
+{##}
+{#                                <p class="list-group-item-text">Click Here to record a carton temperature#}
+{#                                    inspection </p>#}
+{#                            </a>#}
+{#                        {% endif %}#}
+{##}
+{##}
+{#                        {% if inspectionTypes.vision_system_inspection %}#}
+{#                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/vision_system">#}
+{#                                <h4 class="list-group-item-heading">Vision System Inspection</h4>#}
+{##}
+{#                                <p class="list-group-item-text">Click Here to record a vision system inspection </p>#}
+{#                            </a>#}
+{#                        {% endif %}#}
 
                     {% endfor %}
                 </div>
