start URL mapping for pass fail forms

--- a/templates/inspection/detailJob.html
+++ b/templates/inspection/detailJob.html
@@ -29,7 +29,7 @@
                         </a>
 
                         {% for eachPF in pf_inspectionType %}
-                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/pf/{{ eachPF.testName }}">
+                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber.strip }}/pf/{{ eachPF.testName }}/">
                             <h4 class="list-group-item-heading">{{ eachPF.testName }}</h4>
                             <p class="list-group-item-text">Click Here to record a record for {{ eachPF.testName }} </p>
                             </a>
