--- a/templates/inspection/subTemplates/subcheckBoxSelectLock.html
+++ b/templates/inspection/subTemplates/subcheckBoxSelectLock.html
@@ -1,6 +1,7 @@
 <script>
     $(document).ready(function(){
         $('{{idSelect}}').prop('disabled', 'disabled');
+        $('{{idSelect2}}').prop('disabled', 'disabled');
     });
     $('{{ id_check }}').change(function () {
         if ($(this).prop('checked')){
@@ -9,12 +10,18 @@
             $('{{ idSelectopt }}').prop('selected', false);
             {% endwith %}
 
+            {% with idSelect2|add:' option' as idSelectopt %}
+            $('{{ idSelectopt }}').prop('selected', false);
+            {% endwith %}
+
 
             $('{{idSelect}}').prop('disabled', 'disabled');
+            $('{{idSelect2}}').prop('disabled', 'disabled');
         }
         else {
 {#            console.log('Was checked. Now unchecked.');#}
             $('{{idSelect}}').prop('disabled', false);
+            $('{{idSelect2}}').prop('disabled', false);
         }
         });
 
