Create job report summaries for pass fail inspections

--- a/templates/inspection/subTemplates/subPFSummary.html
+++ b/templates/inspection/subTemplates/subPFSummary.html
@@ -2,7 +2,7 @@
     <div class="panel panel-default">
     <div class="panel-body">
         <table class="table table-hover">
-            <caption style="text-align:center">Visual Inspection Summary</caption>
+            <caption style="text-align:center">{{ pfSummaryDict.pfName }}</caption>
             <thead>
             <tr>
                 <th>Total Inspections</th>
