--- a/templates/inspection/forms/partWeightInspection.html
+++ b/templates/inspection/forms/partWeightInspection.html
@@ -25,4 +25,4 @@
 </html>
 
 
-{% include "inspection/subTemplates/toDelete/subMinMaxChecker.html" %}
+{% include "inspection/subTemplates/toDelete/../subTemplates/subMinMaxChecker.html" %}
